load("@npm//@bazel/karma:index.bzl", "karma_web_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "edge_label_render",
    srcs = [
        "edge_label_render.ts",
    ] + ["edge_label_render.css"],
    deps = [
        "//common:interfaces",
        "@npm//lit",
        "@npm//rxjs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = ["edge_label_render_test.ts"],
    deps = [
        ":edge_label_render",
        "//common:interfaces",
        "@npm//@types/jasmine",
        "@npm//jasmine-core",
    ],
)

karma_web_test(
    name = "test",
    browsers = [
        "//testing/web/browsers:chrome-linux",
    ],
    test_lib = ":test_lib",
)
