load("@npm//@bazel/karma:index.bzl", "karma_web_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "node_render",
    srcs = [
        "node_render.ts",
    ] + ["node_render.css"],
    deps = [
        "//common:interfaces",
        "//common:utils",
        "@npm//lit",
        "@npm//rxjs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = ["node_render_test.ts"],
    deps = [
        ":node_render",
        "//common:interfaces",
        "@npm//@types/jasmine",
        "@npm//jasmine-core",
    ],
)

karma_web_test(
    name = "test",
    browsers = [
        "//testing/web/browsers:chrome-linux",
    ],
    test_lib = ":test_lib",
)
